[tool.poetry]
name = "empyre"
version = "0.1.0"
description = ""
authors = ["Hrabal <federicocerchiari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jsonpath-ng = "^1.7.0"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
