[tool.poetry]
name = "empyre"
version = "0.1.0"
description = ""
authors = ["Hrabal <federicocerchiari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
jsonpath-ng = "^1.7.0"
pydantic = "^2.10.2"

[tool.poetry.group.sqlmodel]
optional = true

[tool.poetry.group.sqlmodel.dependencies]
sqlmodel = "^0.0.22"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[radon]
exclude = "test_*.py"
cc_min = "B"
