[tool.poetry]
name = "empyre"
version = "0.1.0"
description = ""
authors = ["Hrabal <federicocerchiari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
jsonpath-ng = "^1.7.0"
pydantic = "^2.10.2"
psycopg2 = "^2.9.10"

[tool.poetry.group.db]
optional = true

[tool.poetry.group.db.dependencies]
sqlmodel = "^0.0.22"
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[radon]
exclude = "test_*.py"
cc_min = "B"
